# fif

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  imgui.ini  update_live_demo.sh
core/: CMakeLists.txt
editor/: .gitignore  CMakeLists.txt  deploy.sh  fifed
editor/src/: editorLayer.cpp  editorLayer.h  editorModule.cpp  editorModule.h  fifed.cpp  fifed.h
editor/src/components/: cameraControllerComponent.cpp  cameraControllerComponent.h
fif/: CMakeLists.txt
fif/cmake/: imgui.cmake  luajit.cmake
fif/include/fif/: fif.h  fif.hpp  pch.hpp  version.hpp
fif/include/fif/audio/: audio_module.hpp
fif/include/fif/core/: application.h  application.hpp  application_status.hpp  entryPoint.h  entryPoint.hpp  entry_point.hpp  invokable.hpp  module.h  module.hpp  opengl.h  opengl.hpp  performanceStats.h  performance_stats.hpp  profiler.h  profiler.hpp  project.hpp  resource.hpp  system.hpp  types.hpp  uuid.hpp  window.h  window.hpp
fif/include/fif/gfx/: batch.h  batch.hpp  camera.h  camera.hpp  color.hpp  frame_buffer.hpp  gfxModule.h  gfxModule.hpp  gfx_module.hpp  glsl_data_type.hpp  orthoCamera.h  orthoCamera.hpp  ortho_camera.hpp  perspectiveCamera.h  primitiveType.h  render_command.hpp  renderer2d.h  renderer2d.hpp  shader.h  shader.hpp  shaderLibrary.h  shaderLibrary.hpp  shader_library.hpp  texture.hpp  vertex.h  vertex.hpp  vertexBuffer.h  vertexBuffer.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
fif/include/fif/imGui/: imGuiModule.hpp
fif/include/fif/imgui/: imgui_module.hpp
fif/include/fif/input/: inputModule.h  inputModule.hpp  input_module.hpp
fif/include/fif/lua_scripting/: lua_scripting_module.hpp
fif/include/fif/native_scripting/: native_script.hpp  native_scripting_module.hpp
fif/src/audio/: audio_module.cpp
fif/src/core/: application.cpp  entry_point.cpp  module.cpp  profiler.cpp  project.cpp  resource.cpp  system.cpp  uuid.cpp  window.cpp
fif/src/core/ecs/: entity.cpp  scene.cpp  scene_serializer.cpp  uuid.cpp
fif/src/core/resource/: resource.cpp  resource_manager.cpp
fif/src/core/serialization/: core_entity_serializer.cpp  core_entity_serializer.hpp  core_serializer.cpp  core_serializer.hpp  project_serializer.cpp  scene_serializer.cpp  vec2_yaml.cpp  vec3_yaml.cpp
fif/src/core/until/: logger.cpp  rng.cpp  timing.cpp
fif/src/gfx/: batch.cpp  frame_buffer.cpp  gfxModule.cpp  gfx_module.cpp  glsl_data_type.cpp  lua_register.cpp  lua_register.hpp  orthoCamera.cpp  ortho_camera.cpp  perspectiveCamera.cpp  render_command.cpp  renderer2d.cpp  shader.cpp  shaderLibrary.cpp  shader_library.cpp  texture.cpp  vertexBuffer.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
fif/src/gfx/components/: renderableCircleComponent.cpp  renderableComponent.cpp  renderableQuadComponent.cpp  renderable_circle_component.cpp  renderable_component.cpp  renderable_quad_component.cpp  transformComponent.cpp  transform_component.cpp
fif/src/gfx/resource/: font.cpp  texture.cpp
fif/src/gfx/serialization/: color_yaml.cpp  gfx_entity_serializer.cpp  gfx_entity_serializer.hpp  gfx_serializer.cpp  gfx_serializer.hpp
fif/src/gfx/shaders/: circle.h  circle.hpp  glyph.hpp  quad.hpp  sprite.hpp
fif/src/gfx/systems/: renderer_system.cpp  renderer_system.hpp
fif/src/gfx/text/: font.cpp  text_align.cpp
fif/src/imGui/: imGuiModule.cpp
fif/src/imgui/: imgui_module.cpp
fif/src/input/: inputModule.cpp  input_module.cpp  lua_register.cpp  lua_register.hpp
fif/src/lua_scripting/: lua_scripting_entity_serializer.cpp  lua_scripting_entity_serializer.hpp  lua_scripting_module.cpp  lua_scripting_serializer.cpp  lua_scripting_serializer.hpp
fif/src/lua_scripting/serialization/: lua_scripting_serializer.cpp
fif/src/lua_scripting/systems/: lua_script_system.cpp  lua_script_system.hpp
fif/src/native_scripting/: native_script.cpp  native_scripting_module.cpp
fif/src/native_scripting/systems/: native_script_system.cpp  native_script_system.hpp
fifed/: CMakeLists.txt  default_imgui.ini  default_layout.ini  pch.hpp
fifed/assets/scenes/: sandbox.yaml  text_test.yaml
fifed/assets/scripts/: fps.lua  fps_component.lua  log_test.lua  logger_test.lua  random_text.lua  spinner.lua  template.lua  test.lua  test_component.lua
fifed/cmake/: tinyfd.cmake
fifed/emsc/: index.html
fifed/src/: camera_controller.cpp  camera_controller.hpp  common.hpp  editor.cpp  editor.hpp  editorModule.cpp  editorModule.h  editorModule.hpp  editorScene.cpp  editorScene.hpp  editor_module.cpp  editor_module.hpp  editor_scene.cpp  editor_scene.hpp  fifed.cpp  fifed.h  fifed.hpp  fifed_module.cpp  fifed_module.hpp  gizmo.cpp  gizmo.hpp  grid.cpp  grid.hpp  icon_manager.cpp  icon_manager.hpp  main.cpp  project_manager.cpp  project_manager.hpp  shortcut.cpp  shortcut.hpp  stage.cpp  stage.hpp
fifed/src/components/: cameraControllerComponent.cpp  cameraControllerComponent.hpp  camera_controller_component.cpp  camera_controller_component.hpp  grid_renderer_component.cpp  grid_renderer_component.hpp
fifed/src/entity_template/: empty_template.cpp  empty_template.hpp  entity_template.cpp  entity_template.hpp  label_template.hpp  sprite_template.cpp  sprite_template.hpp
fifed/src/panels/: editor_panel.cpp  editor_panel.hpp
fifed/src/panels/console/: console_panel.cpp  console_panel.hpp
fifed/src/panels/entities/: entities_panel.cpp  entities_panel.hpp
fifed/src/panels/inspector/: inspector_panel.cpp  inspector_panel.hpp
fifed/src/panels/performance/: performance_panel.cpp  performance_panel.hpp
fifed/src/panels/resource_browser/: resource_browser.cpp  resource_browser.hpp
fifed/src/panels/scene/: scene_panel.cpp  scene_panel.hpp
fifed/src/panels/settings/: settings_panel.cpp  settings_panel.hpp
fifed/src/panels/status/: status_panel.cpp  status_panel.hpp
fifed/src/scripts/: spinner_script.hpp
fifed/src/shaders/: grid.hpp
fifed/src/utils/: imgui_utils.cpp  imgui_utils.hpp
runtime/: CMakeLists.txt  pch.hpp
runtime/src/: runtime.cpp  runtime.hpp  runtime_module.cpp  runtime_module.hpp
(+286 files in other folders)
